[gd_scene load_steps=6 format=4 uid="uid://eb8ccro8ctco"]

[ext_resource type="Script" uid="uid://c618fjagkwp4t" path="res://scripts/tent_to_open.gd" id="1_4tqxa"]
[ext_resource type="Texture2D" uid="uid://6b6ocpsw5tc1" path="res://assets/sprites/tilesets/walls/walls.png" id="2_hbax4"]
[ext_resource type="Script" uid="uid://c604yqc3a6vwu" path="res://scripts/line_edit.gd" id="2_rbfra"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g2nbq"]
texture = ExtResource("2_hbax4")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0

[sub_resource type="TileSet" id="TileSet_i65ug"]
sources/1 = SubResource("TileSetAtlasSource_g2nbq")

[node name="tent to open" type="Node2D"]
script = ExtResource("1_4tqxa")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -181.0
offset_top = -104.0
offset_right = 212.0
offset_bottom = 105.0
color = Color(0, 0, 0.207843, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD1//z/AQACAAQAAAD1//3/AQACAAQAAAD1//7/AQACAAQAAAD1////AQACAAQAAAD1/wAAAQACAAQAAAD1/wEAAQACAAQAAAD1/wIAAQACAAQAAAD1/wMAAQACAAQAAAD1/wQAAQACAAQAAAD1/wUAAQACAAQAAAD2//v/AQACAAQAAAD2//z/AQACAAQAAAD2//3/AQACAAQAAAD2//7/AQACAAQAAAD2////AQACAAQAAAD2/wAAAQACAAQAAAD2/wEAAQACAAQAAAD2/wIAAQACAAQAAAD2/wMAAQACAAQAAAD2/wQAAQACAAQAAAD2/wUAAQACAAQAAAD3//v/AQACAAQAAAD3//z/AQACAAQAAAD3//3/AQACAAQAAAD3//7/AQACAAQAAAD3////AQACAAQAAAD3/wAAAQACAAQAAAD3/wEAAQACAAQAAAD3/wIAAQACAAQAAAD3/wMAAQACAAQAAAD3/wQAAQACAAQAAAD3/wUAAQACAAQAAAD4//v/AQACAAQAAAD4//z/AQACAAQAAAD4//3/AQACAAQAAAD4//7/AQACAAQAAAD4////AQACAAQAAAD4/wAAAQACAAQAAAD4/wEAAQACAAQAAAD4/wIAAQACAAQAAAD4/wMAAQACAAQAAAD4/wQAAQACAAQAAAD4/wUAAQACAAQAAAD5//v/AQACAAQAAAD5//z/AQACAAQAAAD5//3/AQACAAQAAAD5//7/AQACAAQAAAD5////AQACAAQAAAD5/wAAAQACAAQAAAD5/wEAAQACAAQAAAD5/wIAAQACAAQAAAD5/wMAAQACAAQAAAD5/wQAAQACAAQAAAD5/wUAAQACAAQAAAD6//v/AQACAAQAAAD6//z/AQACAAQAAAD6//3/AQACAAQAAAD6//7/AQACAAQAAAD6////AQACAAQAAAD6/wAAAQACAAQAAAD6/wEAAQACAAQAAAD6/wIAAQACAAQAAAD6/wMAAQACAAQAAAD6/wQAAQACAAQAAAD6/wUAAQACAAQAAAD7//v/AQACAAQAAAD7//z/AQACAAQAAAD7//3/AQACAAQAAAD7//7/AQACAAQAAAD7////AQACAAQAAAD7/wAAAQACAAQAAAD7/wEAAQACAAQAAAD7/wIAAQACAAQAAAD7/wMAAQACAAQAAAD7/wQAAQACAAQAAAD7/wUAAQACAAQAAAD8//v/AQACAAQAAAD8//z/AQACAAQAAAD8//3/AQACAAQAAAD8//7/AQACAAQAAAD8////AQACAAQAAAD8/wAAAQACAAQAAAD8/wEAAQACAAQAAAD8/wIAAQACAAQAAAD8/wMAAQACAAQAAAD8/wQAAQACAAQAAAD8/wUAAQACAAQAAAD9//v/AQACAAQAAAD9//z/AQACAAQAAAD9//3/AQACAAQAAAD9//7/AQACAAQAAAD9////AQACAAQAAAD9/wAAAQACAAQAAAD9/wEAAQACAAQAAAD9/wIAAQACAAQAAAD9/wMAAQACAAQAAAD9/wQAAQACAAQAAAD9/wUAAQACAAQAAAD+//v/AQACAAQAAAD+//z/AQACAAQAAAD+//3/AQACAAQAAAD+//7/AQACAAQAAAD+////AQACAAQAAAD+/wAAAQACAAQAAAD+/wEAAQACAAQAAAD+/wIAAQACAAQAAAD+/wMAAQACAAQAAAD+/wQAAQACAAQAAAD+/wUAAQACAAQAAAD///v/AQACAAQAAAD///z/AQACAAQAAAD///3/AQACAAQAAAD///7/AQACAAQAAAD/////AQACAAQAAAD//wAAAQACAAQAAAD//wEAAQACAAQAAAD//wIAAQACAAQAAAD//wMAAQACAAQAAAD//wQAAQACAAQAAAD//wUAAQACAAQAAAAAAPv/AQACAAQAAAAAAPz/AQACAAQAAAAAAP3/AQACAAQAAAAAAP7/AQACAAQAAAAAAP//AQACAAQAAAAAAAAAAQACAAQAAAAAAAEAAQACAAQAAAAAAAIAAQACAAQAAAAAAAMAAQACAAQAAAAAAAQAAQACAAQAAAAAAAUAAQACAAQAAAABAPv/AQACAAQAAAABAPz/AQACAAQAAAABAP3/AQACAAQAAAABAP7/AQACAAQAAAABAP//AQACAAQAAAABAAAAAQACAAQAAAABAAEAAQACAAQAAAABAAIAAQACAAQAAAABAAMAAQACAAQAAAABAAQAAQACAAQAAAABAAUAAQACAAQAAAACAPv/AQACAAQAAAACAPz/AQACAAQAAAACAP3/AQACAAQAAAACAP7/AQACAAQAAAACAP//AQACAAQAAAACAAAAAQACAAQAAAACAAEAAQACAAQAAAACAAIAAQACAAQAAAACAAMAAQACAAQAAAACAAQAAQACAAQAAAACAAUAAQACAAQAAAADAPv/AQACAAQAAAADAPz/AQACAAQAAAADAP3/AQACAAQAAAADAP7/AQACAAQAAAADAP//AQACAAQAAAADAAAAAQACAAQAAAADAAEAAQACAAQAAAADAAIAAQACAAQAAAADAAMAAQACAAQAAAADAAQAAQACAAQAAAADAAUAAQACAAQAAAAEAPv/AQACAAQAAAAEAPz/AQACAAQAAAAEAP3/AQACAAQAAAAEAP7/AQACAAQAAAAEAP//AQACAAQAAAAEAAAAAQACAAQAAAAEAAEAAQACAAQAAAAEAAIAAQACAAQAAAAEAAMAAQACAAQAAAAEAAQAAQACAAQAAAAEAAUAAQACAAQAAAAFAPv/AQACAAQAAAAFAPz/AQACAAQAAAAFAP3/AQACAAQAAAAFAP7/AQACAAQAAAAFAP//AQACAAQAAAAFAAAAAQACAAQAAAAFAAEAAQACAAQAAAAFAAIAAQACAAQAAAAFAAMAAQACAAQAAAAFAAQAAQACAAQAAAAFAAUAAQACAAQAAAAGAPv/AQACAAQAAAAGAPz/AQACAAQAAAAGAP3/AQACAAQAAAAGAP7/AQACAAQAAAAGAP//AQACAAQAAAAGAAAAAQACAAQAAAAGAAEAAQACAAQAAAAGAAIAAQACAAQAAAAGAAMAAQACAAQAAAAGAAQAAQACAAQAAAAGAAUAAQACAAQAAAAHAPv/AQACAAQAAAAHAPz/AQACAAQAAAAHAP3/AQACAAQAAAAHAP7/AQACAAQAAAAHAP//AQACAAQAAAAHAAAAAQACAAQAAAAHAAEAAQACAAQAAAAHAAIAAQACAAQAAAAHAAMAAQACAAQAAAAHAAQAAQACAAQAAAAHAAUAAQACAAQAAAAIAPv/AQACAAQAAAAIAPz/AQACAAQAAAAIAP3/AQACAAQAAAAIAP7/AQACAAQAAAAIAP//AQACAAQAAAAIAAAAAQACAAQAAAAIAAEAAQACAAQAAAAIAAIAAQACAAQAAAAIAAMAAQACAAQAAAAIAAQAAQACAAQAAAAIAAUAAQACAAQAAAAJAPv/AQACAAQAAAAJAPz/AQACAAQAAAAJAP3/AQACAAQAAAAJAP7/AQACAAQAAAAJAP//AQACAAQAAAAJAAAAAQACAAQAAAAJAAEAAQACAAQAAAAJAAIAAQACAAQAAAAJAAMAAQACAAQAAAAJAAQAAQACAAQAAAAJAAUAAQACAAQAAAAKAPv/AQACAAQAAAAKAPz/AQACAAQAAAAKAP3/AQACAAQAAAAKAP7/AQACAAQAAAAKAP//AQACAAQAAAAKAAAAAQACAAQAAAAKAAEAAQACAAQAAAAKAAIAAQACAAQAAAAKAAMAAQACAAQAAAAKAAQAAQACAAQAAAAKAAUAAQACAAQAAAD2//r/AQABAAMAAAD3//r/AQACAAMAAAD4//r/AQADAAMAAAD5//r/AQABAAMAAAD6//r/AQACAAMAAAD7//r/AQADAAMAAAD8//r/AQABAAMAAAD9//r/AQACAAMAAAD+//r/AQADAAMAAAD///r/AQABAAMAAAAAAPr/AQACAAMAAAABAPr/AQADAAMAAAACAPr/AQABAAMAAAADAPr/AQACAAMAAAAEAPr/AQADAAMAAAAFAPr/AQABAAMAAAAGAPr/AQACAAMAAAAHAPr/AQADAAMAAAAIAPr/AQABAAMAAAAJAPr/AQACAAMAAAAKAPr/AQACAAMAAAD1//r/AQACAAMAAAD1//v/AQABAAQAAAA=")
tile_set = SubResource("TileSet_i65ug")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3.5, 3.5)

[node name="Label" type="Label" parent="."]
offset_left = -63.0
offset_top = -46.0
offset_right = 67.0
offset_bottom = -23.0

[node name="Label2" type="Label" parent="."]
offset_left = -66.0
offset_top = 27.0
offset_right = 68.0
offset_bottom = 52.0

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = -32.0
offset_top = -15.0
offset_right = 37.0
offset_bottom = 16.0
script = ExtResource("2_rbfra")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
